Restrict boss admin command to explicit world-event spawning